# StaticResourceAssert

./: .gitignore  CMakeLists.txt  License.txt  Readme.md  dsfasdfsfadfsda.txt
.github/workflows/: CODEOWNERS  buildSRA.yml
StaticResourceAssert/: ApiGenerator.cpp  CMakeLists.txt  Common.cpp  Main.cpp
StaticResourceAssert/include/: ApiGenerator.h  Common.h
StaticResourceAssert/templates/: static_resource_assert_api.ht
StaticResourceAssertUnitTests/: CMakeLists.txt  StaticResourceUnitTest.cpp
